--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,53 @@
     <string name="hello">Hello World, SnapNowActivity!</string>
     <string name="app_name">SnapNow</string>
     <string name ="at">\@</string>
-
+    <string name="version">Version:  </string>
+    <string name="firstactivation">First Activation:  </string>
+    <string name="stats">Statistics</string>
+    <string name="runtime">Runtime:  </string>
+    <string name="alerts">Alerts:  </string>
+	<string name="timesincelast">Time Since last Alert:  </string>
+	<string name="thismonth">This Month:  </string>
+	<string name="settings">Settings</string>
+	<string name="onlyuploadinwifitext">Only upload pics in wifi</string>
+	<string name="google">Google</string>
+	<string name="googleusername">Google Username</string>
+	<string name="googlepass">Google Password</string>
+	<string name="tumblr">Tumblr</string>
+	<string name="sendpicstotumblr">Send Pics To Tumblr</string>
+	<string name="tumblrmail">Tumblr Post Mail </string>
+	<string name="learnmore">(learn more)</string>
+	<string name="attumbrcom">[at]tumblr.com</string>
+	<string name="twitter">Twitter</string>
+	<string name="sendpicstotwitter">Send Pics To Twitter</string>
+	<string name="sendviaemail">Send Via Email</string>
+	<string name="adresses">Adresses (Sepperate With Komma)</string>
+	<string name="seconds">seconds</string>
+	<string name="minutes">minutes</string>
+	<string name="hours">hours</string>
+	<string name="days">days</string>
+	<string name="missed">missed</string>
+	<string name="tumblronlypossible">Upload To Tumblr is only possible when google data is set.</string>
+	<string name="active">active</string>
+	<string name="ago">ago</string>
+	<string name="statsforthemonthof">Stats for the month of</string>
+	<string name="january">January</string>
+	<string name="february">February</string>
+	<string name="march">March</string>
+	<string name="april">April</string>
+	<string name="may">May</string>
+	<string name="june">June</string>
+	<string name="july"></string>
+	<string name="august">August</string>
+	<string name="september">September</string>
+	<string name="october">October</string>
+	<string name="november">November</string>
+	<string name="december">December</string>
+	<string name="currentlyrunningversion">I am currently running SNAPNOW version</string>
+	<string name="istartedthison">I started this project on</string>
+	<string name="overallruntime">Overall runtime</string>
+	<string name="overallcought">Overall cought moments</string>
+	<string name="runntime">Runntime</string>
+	<string name="coughtofmoments">I cought %1$s of %2$s moments this month.\n"</string>
+	<string name="monthendstats">Month End Statistics</string>
 </resources>
