fixed month end entries and a lot of other small stuff

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -45,7 +45,7 @@
 	<string name="october">Oktober</string>
 	<string name="november">November</string>
 	<string name="december">Dezember</string>
-	<string name="currentlyrunningversion">Ich nutzer derzeit SNAPNOW-Version</string>
+	<string name="currentlyrunningversion">Ich nutze derzeit SNAPNOW-Version</string>
 	<string name="istartedthison">Ich habe mit dem Projekt begonnen am</string>
 	<string name="overallruntime">Gesammte Laufzeit</string>
 	<string name="overallcought">Insgesammt erwischte Momente</string>
