--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -60,4 +60,6 @@
 	<string name="instantblackout">Instant Blackout</string>
 	<string name="reupload">Re Upload</string>
 	<string name="moments">Moments</string>
+	<string name="offset">Offset</string>
+	<string name="offsetnrmom">Number of moments:</string>
 </resources>
